# finally

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.claude/: gsd-file-manifest.json  settings.json
.claude-plugin/: marketplace.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/db/: __init__.py  connection.py  repository.py  schema.py  schema.sql  seed.py
backend/app/llm/: __init__.py  client.py  handler.py  mock.py  models.py  prompt.py  prompts.py
backend/app/market/: stream.py
backend/app/market_data/: base.py  massive.py  provider.py  simulator.py
backend/app/routers/: stream.py
backend/app/routes/: __init__.py  chat.py  health.py  portfolio.py  watchlist.py
backend/tests/: test_api.py  test_app.py  test_base.py  test_chat.py  test_db.py  test_db_init.py  test_llm.py  test_massive.py  test_portfolio.py  test_provider.py  test_simulator.py  test_watchlist.py
frontend/: jest.config.ts  package-lock.json  package.json
frontend/lib/: api.ts  (+1 more)
planning/: MARKET_DATA_DESIGN.md  PLAN.md  REVIEW.md
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
static/: index.html
test/: docker-compose.test.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json
(+192 files in other folders)
